--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,40 +1,9 @@
-<h1>Firebase application deploy</h1>
+<div class="container py-5">
+  <div class="row">
+    <div class="col">
+      <h1>CRUD Application</h1>
+    </div>
+  </div>
 
-<p>
-  <img src="https://miro.medium.com/max/1400/1*jAwFJjRn0DYRA3fnxrR9PQ.jpeg" alt="">
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, delectus? Doloribus ex numquam itaque excepturi sint
-  totam sed magni animi nam officia dicta eius nobis corporis assumenda, ipsum eos porro. Porro nemo fuga corrupti eius,
-  ratione deleniti! Repellat ipsum aspernatur numquam nemo assumenda facilis ea maiores excepturi recusandae eius ad
-  aperiam reiciendis quibusdam esse quo repellendus voluptatem ratione harum doloribus, corporis iusto beatae eaque
-  incidunt. Autem, provident? Eligendi autem animi natus quibusdam ex amet perferendis, assumenda cum! Beatae ducimus
-  adipisci libero vel animi eos aliquam officiis voluptatum nobis, exercitationem blanditiis laborum eum sunt ipsum
-  saepe quam deleniti minima, praesentium quae?</p>
-<p>Eveniet inventore neque voluptas dolores iusto excepturi! At, ad. Eum quod molestiae vero numquam sit iste
-  repudiandae corrupti molestias eos, possimus facilis voluptatem a dolor dicta beatae aliquid doloremque quasi facere
-  magnam eveniet ea incidunt? Et aliquam repellat laborum cumque laudantium aliquid ipsum velit ex nemo? Mollitia veniam
-  qui in quibusdam rem vero accusantium, inventore quia deleniti, sint commodi cumque nulla sequi aspernatur, dicta
-  itaque reiciendis. Cupiditate, perspiciatis quia! Saepe quaerat officia repudiandae sapiente accusantium odio
-  expedita, earum sed, consequatur itaque reprehenderit ipsum. Eum consequatur cumque, praesentium quis molestiae, alias
-  harum rerum soluta possimus dicta debitis neque sequi dignissimos explicabo.</p>
-<p>Ipsum pariatur sint esse amet possimus laboriosam sunt non perferendis. Doloremque sapiente quos labore accusamus
-  delectus magni sit asperiores eligendi mollitia, maxime eveniet beatae quis quae, iusto rem! Tempore totam ab vero
-  necessitatibus sit maiores, facilis dicta harum ex vitae illum a quaerat libero quis nisi non molestiae, quisquam
-  distinctio omnis saepe dolor. Quasi maxime beatae asperiores deserunt rem, dolore fugiat assumenda velit, cupiditate
-  nihil deleniti similique vel animi quibusdam dignissimos quod tempora qui. Voluptatibus molestiae consequatur eius
-  quam incidunt maxime animi, deserunt magni. Fugit dolores harum animi natus magnam voluptates molestiae assumenda
-  mollitia accusamus, laboriosam officia totam delectus laborum?</p>
-<p>Impedit, modi accusamus in veritatis ducimus exercitationem est ea temporibus numquam laudantium repellendus fuga
-  minus voluptates vero repellat aut consequuntur? Autem, repudiandae aliquid, laboriosam accusantium impedit ipsam,
-  dolor cum esse voluptates harum nobis minima vel sapiente? Dolorem nostrum dolore eos explicabo ad dolor deleniti.
-  Molestiae quae tenetur tempora quasi repellat nisi similique iste maiores debitis voluptatem veritatis animi
-  accusantium consequatur minima in quas provident, porro adipisci atque amet sunt earum quaerat quisquam
-  necessitatibus. Tempore quas necessitatibus distinctio! Corporis odit incidunt illum mollitia harum officia, veniam
-  laboriosam. Adipisci dignissimos deleniti cumque eligendi saepe exercitationem earum quasi? Doloribus deserunt at
-  nobis nisi.</p>
-<p>Illum nobis necessitatibus nisi fugit dolor maxime quisquam, aut fuga autem delectus, odio laboriosam dolore non
-  beatae magni, similique culpa optio tempora. Recusandae aspernatur, autem officia corrupti ab similique, enim aut esse
-  voluptatum accusantium tempore, quaerat exercitationem nihil veritatis nisi quo! Cupiditate id cum consectetur tenetur
-  enim iusto odit illum corporis placeat asperiores quidem necessitatibus odio, nisi aspernatur minus vel vitae ut
-  mollitia praesentium pariatur non ullam. Molestiae voluptates veritatis a, exercitationem, incidunt eum quam nemo eos
-  quas iusto asperiores! Repellat, laborum voluptas debitis, reprehenderit iure quas at voluptates explicabo odit ea
-  excepturi ad dolorum sint possimus. Magnam, totam aliquid!</p>
+  <app-customers-host></app-customers-host>
+</div>
